<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/all_bg_color"
    tools:context="com.szfp.bettwostar.MakeBetActivity">
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/dark_gray"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />
    <FrameLayout
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:id="@+id/ll_game_type"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:paddingLeft="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/please_game_type"/>

            <ListView
                android:id="@+id/lv_game_type"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scrollbars="none"/>

        </LinearLayout>



        <LinearLayout
            android:visibility="gone"
            android:id="@+id/ll_game_sort"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:paddingLeft="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/please_game_sort"/>

            <ListView
                android:id="@+id/lv_game_sort"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scrollbars="none"/>

        </LinearLayout>


        <LinearLayout
            android:visibility="gone"
            android:id="@+id/ll_game_under"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="20dp"
                android:text="@string/please_game_under" />

            <ListView
                android:id="@+id/lv_game_under"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scrollbars="none" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/text_font_20"
                android:textSize="@dimen/text_font_15"
                android:textColor="@color/red"
                android:text="@string/nap_or_prem_and_grouping_can_only_choose_one_combination_can_be_multiple_choice"/>

            <Button
                android:id="@+id/bt_next"
                android:layout_gravity="right"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/main_bottom"
                android:text="@string/next"
                android:textColor="@color/wheat"
                android:textSize="20sp"
                tools:ignore="RtlHardcoded" />

        </LinearLayout>

    </FrameLayout>
</LinearLayout>
